[package]
name = "acme-proto"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan.ochtman@ing.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
rcgen = "0.3"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
ring = "0.14"
serde = "1"
serde_derive = "1"
serde_json = "1"
